Dashboard - orders - timeline overflow fix

--- a/frontend/src/screens-content/dashboard/components/content/components/orders/order-detail/order-detail.module.scss
+++ b/frontend/src/screens-content/dashboard/components/content/components/orders/order-detail/order-detail.module.scss
@@ -1,7 +1,7 @@
 .container {
   padding: 1rem;
   border-radius: 0 1rem 1rem 0;
-  height: 700px;
+  // height: 700px;
 }
 
 .box {
