--- a/frontend/src/screens-content/dashboard/dashboard.module.scss
+++ b/frontend/src/screens-content/dashboard/dashboard.module.scss
@@ -259,8 +259,6 @@
 
 .ordersTableMainpanel {
   margin-bottom: 12px;
-  height: 90vh;
-  overflow: auto;
   border: 1px solid white;
   border-radius: 1rem;
   margin-left: 1rem;
